[gd_scene load_steps=33 format=3 uid="uid://dwud7342c4hlo"]

[ext_resource type="Script" path="res://Jugador/jugador.gd" id="1_fnw1q"]
[ext_resource type="Texture2D" uid="uid://dgln0evj0153m" path="res://Textures/Player/run/run_1.png" id="2_lsyar"]
[ext_resource type="PackedScene" uid="uid://d6vbdqp0g70d" path="res://Utilidades/hurt_box.tscn" id="3_8ue8w"]
[ext_resource type="Texture2D" uid="uid://d0nkpq3qnyn65" path="res://Textures/Player/run/run_2.png" id="3_ycpcx"]
[ext_resource type="Texture2D" uid="uid://do6fwhsgomwqb" path="res://Textures/Player/run/run_3.png" id="4_h8e5k"]
[ext_resource type="Texture2D" uid="uid://cle7mdr4nu5r7" path="res://Textures/Player/run/run_4.png" id="5_ulomo"]
[ext_resource type="Texture2D" uid="uid://pdf2mc88rbac" path="res://Textures/Player/run/run_5.png" id="6_c26lu"]
[ext_resource type="Texture2D" uid="uid://ckh10ocjmsdqf" path="res://Textures/Player/run/run_6.png" id="7_0pr3p"]
[ext_resource type="Texture2D" uid="uid://blksp7uxuyqr3" path="res://Textures/Player/run/run_7.png" id="8_vgjqf"]
[ext_resource type="Texture2D" uid="uid://u6coc07o7pxr" path="res://Textures/Player/run/run_8.png" id="9_8r8e8"]
[ext_resource type="Texture2D" uid="uid://do0gqrfbtf1sa" path="res://Textures/Player/run/run_9.png" id="10_ajynj"]
[ext_resource type="Texture2D" uid="uid://b18dpunqhjyt7" path="res://Textures/Player/run/run_10.png" id="11_1ualg"]
[ext_resource type="Texture2D" uid="uid://ca4w8tn8c5xrl" path="res://Textures/Player/idle/idle_1.png" id="12_qr5ne"]
[ext_resource type="Texture2D" uid="uid://ky245rk7yp3h" path="res://Textures/Player/idle/idle_2.png" id="13_bfwer"]
[ext_resource type="Texture2D" uid="uid://bdpaev0c0julf" path="res://Textures/Player/idle/idle_3.png" id="14_7fu0q"]
[ext_resource type="Texture2D" uid="uid://b1742sejiubc1" path="res://Textures/Player/idle/idle_4.png" id="15_d1dgw"]
[ext_resource type="Texture2D" uid="uid://dd8lkwsv6njjb" path="res://Textures/Player/idle/idle_5.png" id="16_pxxt6"]
[ext_resource type="Texture2D" uid="uid://ccjt17a3vxoa4" path="res://Textures/Player/idle/idle_6.png" id="17_vm32m"]
[ext_resource type="Texture2D" uid="uid://u6oiu2euyjej" path="res://Textures/Player/idle/idle_7.png" id="18_s50y1"]
[ext_resource type="Texture2D" uid="uid://l835cfnym367" path="res://Textures/Player/idle/idle_8.png" id="19_xojhc"]
[ext_resource type="Texture2D" uid="uid://btxk6162ij80b" path="res://Textures/Player/idle/idle_9.png" id="20_lmeja"]
[ext_resource type="Texture2D" uid="uid://dspvbpf15nkq6" path="res://Textures/Player/idle/idle_10.png" id="21_0nayp"]
[ext_resource type="Texture2D" uid="uid://cp000d7h473ge" path="res://Textures/Player/idle/idle_11.png" id="22_47gtl"]
[ext_resource type="Texture2D" uid="uid://cli274rg3coto" path="res://Textures/Player/idle/idle_12.png" id="23_3kacm"]
[ext_resource type="Texture2D" uid="uid://smd0jts4gfp0" path="res://Textures/GUI/exp_background.png" id="25_jkg3k"]
[ext_resource type="Texture2D" uid="uid://c8bnj6epiwxor" path="res://Textures/GUI/exp_progress.png" id="26_ulk0o"]

[sub_resource type="SpriteFrames" id="SpriteFrames_awq1q"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_lsyar")
}, {
"duration": 1.0,
"texture": ExtResource("3_ycpcx")
}, {
"duration": 1.0,
"texture": ExtResource("4_h8e5k")
}, {
"duration": 1.0,
"texture": ExtResource("5_ulomo")
}, {
"duration": 1.0,
"texture": ExtResource("6_c26lu")
}, {
"duration": 1.0,
"texture": ExtResource("7_0pr3p")
}, {
"duration": 1.0,
"texture": ExtResource("8_vgjqf")
}, {
"duration": 1.0,
"texture": ExtResource("9_8r8e8")
}, {
"duration": 1.0,
"texture": ExtResource("10_ajynj")
}, {
"duration": 1.0,
"texture": ExtResource("11_1ualg")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("12_qr5ne")
}, {
"duration": 1.0,
"texture": ExtResource("13_bfwer")
}, {
"duration": 1.0,
"texture": ExtResource("14_7fu0q")
}, {
"duration": 1.0,
"texture": ExtResource("15_d1dgw")
}, {
"duration": 1.0,
"texture": ExtResource("16_pxxt6")
}, {
"duration": 1.0,
"texture": ExtResource("17_vm32m")
}, {
"duration": 1.0,
"texture": ExtResource("18_s50y1")
}, {
"duration": 1.0,
"texture": ExtResource("19_xojhc")
}, {
"duration": 1.0,
"texture": ExtResource("20_lmeja")
}, {
"duration": 1.0,
"texture": ExtResource("21_0nayp")
}, {
"duration": 1.0,
"texture": ExtResource("22_47gtl")
}, {
"duration": 1.0,
"texture": ExtResource("23_3kacm")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_1lwkn"]
radius = 7.0
height = 34.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n8xva"]
size = Vector2(18, 38)

[sub_resource type="CircleShape2D" id="CircleShape2D_uh1f3"]
radius = 324.025

[sub_resource type="CircleShape2D" id="CircleShape2D_5wtog"]
radius = 63.0317

[sub_resource type="CircleShape2D" id="CircleShape2D_qyob0"]
radius = 12.083

[node name="Jugador" type="CharacterBody2D"]
motion_mode = 1
script = ExtResource("1_fnw1q")

[node name="Sprite2D" type="Sprite2D" parent="." groups=["jugador"]]
texture_filter = 1
position = Vector2(97, 4)
scale = Vector2(1, 1.072)
flip_h = true
hframes = 10
frame = 1
region_rect = Rect2(120, 212, 2641, 43)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Sprite2D"]
position = Vector2(-241, -104.478)
sprite_frames = SubResource("SpriteFrames_awq1q")
animation = &"idle"
frame_progress = 0.872774
speed_scale = 3.0
centered = false
flip_h = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(-1, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_1lwkn")

[node name="walkTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.1
one_shot = true

[node name="HurtBox" parent="." instance=ExtResource("3_8ue8w")]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" parent="HurtBox" index="0"]
shape = SubResource("RectangleShape2D_n8xva")

[node name="Ataques" type="Node2D" parent="."]

[node name="flechaTimer" type="Timer" parent="Ataques"]
unique_name_in_owner = true
wait_time = 1.5

[node name="flechaAttackTimer" type="Timer" parent="Ataques/flechaTimer"]
unique_name_in_owner = true
wait_time = 0.075

[node name="arma2Timer" type="Timer" parent="Ataques"]
unique_name_in_owner = true
wait_time = 3.0

[node name="armar2AtaqueTimer" type="Timer" parent="Ataques/arma2Timer"]
unique_name_in_owner = true
wait_time = 0.2

[node name="EnemyDetectionArea" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyDetectionArea"]
shape = SubResource("CircleShape2D_uh1f3")

[node name="GrabArea" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="GrabArea"]
shape = SubResource("CircleShape2D_5wtog")

[node name="CollectArea" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollectArea"]
shape = SubResource("CircleShape2D_qyob0")

[node name="GUI" type="CanvasLayer" parent="."]

[node name="GUI" type="Control" parent="GUI"]
layout_mode = 3
anchors_preset = 0
offset_right = 640.0
offset_bottom = 360.0

[node name="ExpProgressBar" type="TextureProgressBar" parent="GUI/GUI"]
unique_name_in_owner = true
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture_under = ExtResource("25_jkg3k")
texture_progress = ExtResource("26_ulk0o")

[node name="Label_Nivel" type="Label" parent="GUI/GUI/ExpProgressBar"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 540.0
offset_top = -3.0
offset_right = 640.0
offset_bottom = 20.0
text = "Nivel : 1
"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="hurt" from="HurtBox" to="." method="_on_hurt_box_hurt"]
[connection signal="timeout" from="Ataques/flechaTimer" to="." method="_on_flecha_timer_timeout"]
[connection signal="timeout" from="Ataques/flechaTimer/flechaAttackTimer" to="." method="_on_flecha_attack_timer_timeout"]
[connection signal="timeout" from="Ataques/arma2Timer" to="." method="_on_arma_2_timer_timeout"]
[connection signal="timeout" from="Ataques/arma2Timer/armar2AtaqueTimer" to="." method="_on_armar_2_ataque_timer_timeout"]
[connection signal="body_entered" from="EnemyDetectionArea" to="." method="_on_enemy_detection_area_body_entered"]
[connection signal="body_exited" from="EnemyDetectionArea" to="." method="_on_enemy_detection_area_body_exited"]
[connection signal="area_entered" from="GrabArea" to="." method="_on_grab_area_area_entered"]
[connection signal="area_entered" from="CollectArea" to="." method="_on_collect_area_area_entered"]

[editable path="HurtBox"]
